--- a/package.json
+++ b/package.json
@@ -62,10 +62,13 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@stellar/freighter-api": "^4.1.0",
     "@stellar/stellar-sdk": "^13.3.0",
     "framer-motion": "^12.18.1",
     "passkey-kit": "^0.10.24",
-    "react-qrcode-logo": "^3.0.0"
+    "react-qrcode-logo": "^3.0.0",
+    "react-signalr": "^0.2.24",
+    "socket.io-client": "^4.8.1"
   }
 }
